adding simple map and image picker

--- a/app.json
+++ b/app.json
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "org.streetr",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "org.streetr"
     }
   }
 }
