--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "empty-project-template",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "streetr",
+  "main": "./src/entryPoint.js",
   "private": true,
   "scripts": {
     "start": "expo start",
