--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## Expo
 node_modules/**/*
 .expo/*
 npm-debug.*
@@ -5,3 +6,41 @@ npm-debug.*
 *.p12
 *.key
 *.mobileprovision
+
+## Android (from https://stackoverflow.com/a/17803964/3263033)
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+.navigation
+captures/
+output.json 
+
+#NDK
+obj/
+.externalNativeBuild
